<resources>
    <string name="app_name">Foodies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_goals">Goals</string>
    <string name="menu_weight">Weight</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
</resources>