<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.foodies.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.foodies.ui.goals.GoalsFragment"
        android:label="@string/menu_goals"
        tools:layout="@layout/fragment_goals" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.foodies.ui.weight.WeightFragment"
        android:label="@string/menu_weight"
        tools:layout="@layout/fragment_weight" />

    <!--<fragment
        android:id="@+id/nav_settings"
        android:name="com.example.foodies.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />-->
</navigation>